syntax = "proto3";

package payment;

option go_package = "./gen/paymentpb";



// Service contract defined by the Application Service Port
service PaymentService {
  rpc CreatePaymentSession(CreatePaymentSessionRequest) returns (CreatePaymentSessionResponse);
  rpc VerifyPayment(VerifyPaymentRequest) returns (VerifyPaymentResponse); // Empty success response
}

message CreatePaymentSessionRequest {
  string channel_id = 1;         // UUID string
  string purchaser_user_id = 2;  // UUID string
  int32 amount_paid_cents = 3;
  int64 storage_added_bytes = 4;
}

message CreatePaymentSessionResponse {
  string razorpay_order_id = 1;
}

message VerifyPaymentRequest {
  string razorpay_order_id = 1;
  string razorpay_payment_id = 2; // This is what you record as razorpay_session_id
  string razorpay_signature = 3;
}

message VerifyPaymentResponse{
  bool success = 1;
}